infest/skel/etc/iptables/rules.v4
# Sane IPTABLES Rules, retiolum-permissive, world-enforcing
*nat
:PREROUTING ACCEPT [262534:163260473]
:POSTROUTING ACCEPT [5060049:305386323]
:OUTPUT ACCEPT [5060049:305386323]
COMMIT

*mangle
:PREROUTING ACCEPT [41358433:26228470872]
:INPUT ACCEPT [41358389:26228463060]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [37015162:23438396300]
:POSTROUTING ACCEPT [37015162:23438396300]
COMMIT

*filter
:INPUT DROP [9:3336]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [821:311282]
-A INPUT -i lo -j ACCEPT
-A INPUT -i retiolum -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 655 -j ACCEPT
COMMIT
